--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -2,10 +2,10 @@
 
 .header-container {
   background: linear-gradient(
-                  -60.76deg,
-                  #9679ff 0,
-                  #d499ea 57.96%,
-                  #eea4b3 100%
+    -60.76deg,
+    $bg-colour-1 0,
+    $bg-colour-2 57.96%,
+    $bg-colour-3 100%
   );
 
   &::before {
@@ -51,7 +51,7 @@
     font-size: $medium-font-size;
     line-height: $medium-line-height;
     box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
-    color: #2e2d36;
+    color: $light-dark-colour;
   }
 
   ::placeholder {
@@ -109,7 +109,7 @@
 
   .list-btn {
     background-color: white;
-    color: mediumpurple;
+    color: $mediumpurple;
   }
 }
 
@@ -130,14 +130,12 @@
     font-weight: 700;
     border: none;
     border-radius: 36px;
-    background-color: #f7a31d;
+    background-color: $light-yellow;
     color: white;
   }
 }
 
 .cities-container {
-  //margin-top: 100px;
-  //margin-bottom: 100px;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -153,7 +151,7 @@
 
   p {
     font-size: $medium-font-size;
-    color: #2e2d36;
+    opacity: 0.8;
     margin-top: 3rem;
     margin-bottom: 5rem;
   }
@@ -164,7 +162,7 @@
   height: 200px;
   position: relative;
   width: 100%;
-  background-color: mediumpurple;
+  background-color: $mediumpurple;
   border-radius: 6px;
   cursor: pointer;
   margin-bottom: 20px;
@@ -201,41 +199,145 @@
   transform: translateY(-50%);
 }
 
-.footer-container {
-  //padding-top: 100px;
+.rental-steps-container {
+  padding-bottom: 100px;
+
+  .switch {
+    @extend %flex-row;
+  }
 
   .switch-btn {
     background-color: #f9f9f9;
-    //height: 4.25rem;
     height: 4.125rem;
     border-radius: 2.125rem;
     @extend %flex-row;
     width: 100%;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 
     button {
       width: 48.5%;
       border: none;
       border-radius: 2.125rem;
       background-color: transparent;
-      font-size: 20px;
+      font-size: 18px;
       text-align: center;
       cursor: pointer;
       font-weight: 700;
-      color: #858e98;
+      color: $lighter-dark-colour;
       height: 3.2rem;
+
       &.active {
         background-color: white;
-        color: #7c54c1;
-        box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.05);
+        color: $deep-purple;
+        box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.05);
       }
     }
   }
 }
 
-.switch {
-  @extend %flex-row;
+.rental-instruction {
+  .rental-info {
+    position: relative;
+
+    .info-img-container {
+      height: 108px;
+      text-align: center;
+      img {
+        height: auto;
+        //width: 100%;
+      }
+    }
+
+    .info-content {
+      line-height: $small-line-height;
+      h3 {
+        font-size: 17px;
+        font-weight: 600;
+        margin: 17px 0;
+      }
+      p {
+        opacity: 0.8;
+      }
+    }
+
+    .step-number {
+      position: absolute;
+      font-weight: 700;
+      font-size: 36px;
+      left: -40px;
+      top: 112px;
+      color: $deep-purple;
+    }
+  }
+  .learn-more-btn {
+    margin-top: 50px;
+    text-align: center;
+    button {
+      padding: 6px 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: 700;
+      color: white;
+      font-size: $small-font-size;
+      background-color: $deep-purple;
+    }
+  }
 }
+
+.perfect-place-section {
+  background-color: #9679ff;
+  padding: 11.25rem 4rem 9.75rem;
+  color: white;
+  position: relative;
+  .perfect-place-content {
+    z-index: 1;
+    h1 {
+      //font-style: italic;
+      font-weight: 700;
+      font-size: 38px;
+      line-height: 50px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: $medium-font-size;
+    }
+    button {
+      margin-top: 20px;
+      padding: 16px 28px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      color: white;
+      font-size: $small-font-size;
+      background-color: $deep-purple;
+      font-weight: 700;
+    }
+  }
+  img {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: $light-dark-colour;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.2;
+  }
+}
+
+// Responsiveness
 
 @media (max-width: 767.98px) {
   %font-small {
@@ -289,13 +391,12 @@
   }
   .cities-container {
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
   }
   .cities-title {
     h1 {
-      font-size: $medium-font-size;
+      @extend %font-small;
       line-height: $small-line-height;
-      font-weight: 700;
     }
 
     p {
@@ -307,6 +408,43 @@
   .city-name {
     font-size: 14px;
     line-height: 20px;
+  }
+  .switch-btn {
+    span {
+      font-size: 16px;
+    }
+  }
+  .rental-instruction {
+    .rental-info {
+      text-align: center;
+      .info-content {
+        margin-bottom: 50px;
+      }
+      .step-number {
+        font-size: $small-font-size;
+        right: 190px;
+        top: 124px;
+      }
+    }
+  }
+  .perfect-place-section {
+    padding: 4rem 1.125rem 3rem;
+    img {
+      object-position: right;
+    }
+
+    .perfect-place-content {
+      h1 {
+        font-size: $medium-font-size;
+        line-height: 25px;
+      }
+      p {
+        font-size: $small-font-size;
+      }
+      button {
+        padding: 13px 20px;
+      }
+    }
   }
 }
 
