--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $light-dark-colour:  #2e2d36;
 $lighter-dark-colour:  #858e98;
 $mediumpurple: mediumpurple;
 $deep-purple: #7c54c1;
+$deeper-purple: #7a1ea0;
 $light-yellow: #f7a31d;
 $light-border: #e9eaef;
 $footer_bg-colour:#2d2e35;
