feat: Add styles

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -17,6 +17,7 @@ $deep-purple: #7c54c1;
 $deeper-purple: #7a1ea0;
 $light-yellow: #f7a31d;
 $light-border: #e9eaef;
+$hover-color: #f2f3f5;
 $footer_bg-colour:#2d2e35;
 
 // Section spacing
