--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -24,6 +24,9 @@ $footer_bg-colour:#2d2e35;
 $section-spacing : 100px;
 $small-section-spacing : 50px;
 
+// Icon
+$svg-small-size : 25px;
+$svg-big-size : 30px;
 
 %flex {
   display: flex;
