--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -24,3 +24,31 @@
     color: $lighter-dark-colour;
   }
 }
+
+@mixin switch-btn {
+  background-color: #f9f9f9;
+  height: 4.125rem;
+  border-radius: 2.125rem;
+  @extend %flex-row;
+  width: 100%;
+  margin-bottom: 50px;
+
+  button {
+    width: 48.5%;
+    border: none;
+    border-radius: 2.125rem;
+    background-color: transparent;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+    font-weight: 700;
+    color: $lighter-dark-colour;
+    height: 3.2rem;
+
+    &.active {
+      background-color: white;
+      color: $deep-purple;
+      box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.05);
+    }
+  }
+}
