Refactor: Refactoring styles

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -43,7 +43,7 @@
 
   h4 {
     font-size: $smallest-font-size;
-    font-weight: 700;
+    font-weight: $font-weight;
     line-height: 20px;
     color: white;
   }
