--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,17 @@
 // Fonts
-$small-font-size: 16px;
 $smallest-font-size: 14px;
+$smallest-line-height: 20px;
+
+$small-font-size: 16px;
 $small-line-height: 22px;
+
 $medium-font-size : 20px;
 $medium-line-height: 28px;
+
 $large-font-size: 48px;
+$large-line-height: 48px;
+
+$font-weight :700;
 
 // Colours
 $bg-colour-1:  #9679ff;
@@ -52,6 +59,15 @@ $svg-big-size : 30px;
 }
 %large-heading-style{
   font-size: $large-font-size;
-  line-height: $medium-line-height;
+  line-height: $large-line-height;
   font-weight: 700;
+}
+
+
+%button {
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  font-weight: $font-weight;
+  color: white;
 }
