--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,7 @@
-@import "~bootstrap/scss/bootstrap";
-@import "variables";
-@import "base";
-@import "navbar";
-@import "footer";
-@import "renting";
-@import "home";
+ @import "../../../node_modules/bootstrap/scss/bootstrap";
+ @import "variables";
+ @import "base";
+ @import "navbar";
+ @import "footer";
+ @import "renting";
+ @import "home";
